# domoaave

./: .gitignore  CMakeLists.txt  README.md  domoaave.h  getEnergyAndPublish.c  getIPDomoticzServer.c  getJsonParamters.c  totalCost.data
config/: client.config.json
essais-tests/: test-mois.c  test_pigpio_bcm17  test_pigpio_bcm17.c  tranche-horaire.c  watchdog.c
include/: domoaave.h
infra/opt/: config_local.sh
infra/python/: README  domoaave.conf  domoaave_client.py
infra/server/: README  domoaave-server.service  server.py
infra/system-connections/: PixelJacques.nmconnection  aaveiot.nmconnection  verdier.nmconnection
infra/systemd_system/: README  blink23.service  blink24.service  domoaave_client.service  getEnergyAndPublish.service  watchdog_app.service  wifi-watchdog.service
infra/watchdog/: README  watchdog_app.sh  watchdog_app.sh.old  wifi_watchdog.sh
obsolete/: getEnergyAndPublish.c.SIGNAL  mm32lm-1884.c  mm32lm.c  mm32lm.c.save
scripts/: update_config.sh  wifi_autoconnect.sh  wifi_install.sh  wifi_multi.sh  wifi_remove.sh  wifi_toggle.sh
simulateurs/: blink23.c  blink24.c  simumm32.c
src/: getEnergyAndPublish.c  report_kwh  report_kwh.c  report_kwh.c.old  report_kwh_csv  report_kwh_csv.c
